[package]
name = "velox"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
deadpool-redis = "0.13"
base62 = "2.0"
rand = "0.8"
url = "2.4"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"